<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/back_btn" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/wallpaperprimary"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite_btn"
            android:src="@drawable/ic_baseline_favorite_border_24"/>

    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="10dp"
        android:src="@drawable/bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/wallpaperprimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/song_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconSize="40dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_pause_24"
            android:layout_marginHorizontal="45dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@color/cool_pink"
            app:iconTint="@color/white"
            app:iconSize="50dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:iconSize="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/start_tv"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="15sp"/>
        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/end_tv"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/reapeat_btn"
            android:src="@drawable/ic_baseline_repeat_icon"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equilizer_btn"
            android:src="@drawable/ic_baseline_graphic_eq_icon"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/ic_baseline_timer_icon"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:src="@drawable/ic_baseline_share_icon"
            android:layout_weight="1"/>



    </LinearLayout>


</LinearLayout>