<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--       for butoton-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:backgroundTint="@color/cool_pink"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/shuffleBtn"
                android:contentDescription="@string/suffle_btn"
                android:drawableTop="@drawable/ic_baseline_shuffle_24"
                android:text="@string/suffle_btn"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/favoriteBtn"
                android:contentDescription="@string/favorite_btn"
                android:drawableTop="@drawable/ic_baseline_favorite_border_24"
                android:text="@string/favorite_btn"
                android:textColor="@color/black" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/playlistBtn"
                android:contentDescription="@string/playlist_btn"
                android:drawableTop="@drawable/ic_playlist"
                android:text="@string/playlist_btn"
                android:textColor="@color/black" />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>



</RelativeLayout>